static/css/style.css
@charset "utf-8";

/* =Reset default browser CSS.
Based on work by Eric Meyer: http://meyerweb.com/eric/tools/css/reset/index.html
-------------------------------------------------------------- */
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {border: 0;font-family: inherit;font-size: 100%;font-style: inherit;font-weight: inherit;margin: 0;outline: 0;padding: 0;vertical-align: baseline;}

ol, ul {list-style: none;}
table {border-collapse: separate;border-spacing: 0;}
caption, th, td {font-weight: normal;text-align: left;}
blockquote:before, blockquote:after,q:before, q:after {content: "";}
blockquote, q {quotes: "" "";}
a img{border: 0;}
footer, header, menu, nav, section {display: block;}
/* -------------------------------------------------------------- */

body{
	color:#333;
	font:12px verdana,"yu gothic","YuGothic","hiragino kaku gothic pron","メイリオ","Meiryo","sans-serif";
	line-height:1.5;
	background:#8ea99b;
	-webkit-text-size-adjust: none;
}

/* リンク設定
------------------------------------------------------------*/
a{color:#3f4360;text-decoration:none;}
a:hover{color:#292d48;}
a:active, a:focus{outline:0;}

.headerIcon>.material-icons {
	color:#fff;
	cursor:pointer;
	padding:3px;
	border:2px solid #fff;
	border-radius:5px;
}

.headerIcon>.material-icons:hover {
	color:yellow;
	border:2px solid yellow;
	box-shadow: 0 0 10px #fdff80;
	text-shadow: 0 0 10px #fdff80;
}

/* 全体
------------------------------------------------------------*/
#wrapper{
	margin:0 auto;
	position:relative;
}

.inner{
	margin:0 auto;
	display:flex;
	justify-content: space-between;
	align-items: center;
}

/*************
/* ヘッダー
*************/
#header{
	padding:10px 0 15px;
	overflow:hidden;
	background:#5e7361;
}

* html #header{height:1%;}

#header h1{
	font-size:12px;
	font-weight:normal;
	color:#fff;
}


/*************
/* ロゴ
*************/
#header .logo{
	padding:20px 0 0;
}

.logo a{
	font-size:20px;
	font-weight:bold;
	line-height:1;
	color:#fff;
}

.logo span{
	font-size:12px;
	font-weight:normal;
}

/**************************
/* グリッド
**************************/
.gridWrapper{
	padding-bottom:20px;
	overflow: hidden;
}

* html .gridWrapper{height:1%;}
	
.grid{
	float:left;
	border-radius:5px;
	background:#fff;
}

.grid h3{
	padding:20px 5px;
	text-align:center;
	color:#fff;
	border-radius:5px 5px 0 0;
	background:#292d48;
}

.grid p{ padding:5px 10px; }

/*************
メイン コンテンツ
*************/

.fader{
	animation-name:fadeInAnime;
	animation-duration:1s;
}

@keyframes fadeInAnime{
  from {opacity: 0}
  to {opacity: 1;}
}

.alignleft{
	float:left;
	clear:left;
	margin:3px 10px 10px 0;
}

.alignright{
	float:right;
	clear:right;
	margin:3px 0 10px 10px;
}

/*************
テーブル
*************/
table.table{
	border-collapse:collapse;
	width:100%;
	margin:10px auto;
}

table.table th,table.table td{
	padding:5px;
	border:1px solid #292d48;
}

table.table th{
	text-align:right;
	font-weight:bold;
	letter-spacing:1px;
	white-space:nowrap;
	color:#fff;
	background:#3f4360;
	border-left:#292d48 5px solid
}

table.table td{border-left:#292d48 3px double}

/*************
サブコンテンツ
*************/
#sub ul{padding:10px;}

#sub li{
	margin-bottom:10px;
	padding-bottom:10px;
	border-bottom:1px dashed #ebebeb;
}

#sub li:last-child{
	border:0;
	margin-bottom:0;
}

#sub li a{display:block;}
#sub ul.list{padding-bottom:7px;}

#sub ul.list li{
	clear:both;
	margin-bottom:5px;
	padding:5px 0;
	overflow:hidden;
}

* html #sub ul.list li{height:1%;}

#sub ul.list li img{
	float:left;
	margin-right:10px;
}

#sub ul.list li{
	font-size:12px;
	line-height:1.35;
}

/*************
/* フッター
*************/
#footer{
	clear:both;
	padding:20px 0;
	overflow:hidden;
	background:#5e7361;
}

.tel strong{
	font-size:20px;
	font-weight:bold;
}

#footer a{color:#fff;}
#footer a:hover{color:#ccc;}
#footer .copyright{font-size:11px;}

/* PC用 */
@media only screen and (min-width:960px){	
	#wrapper,.inner{
		width:80%;
		padding:0;
	}
	
	#wrapper{
		padding-top:20px;
		padding-bottom:20px;
	}
	
	.aboutHighlight, .lines {font-size: 17px;}

	/* グリッド全体 */
	.gridWrapper{
		width:80%;
		margin:0 0 0 -20px;
	}
	
	/* グリッド共通 ベース:トップページ4カラム */
	.grid{
		float:left;
		width:220px;
		margin-left:20px;
	}
	
	#sub .grid, #footer .grid{ width:25%; }
}

/* モニター幅940px以下 */
@media only screen and (max-width:940px){
	#header h1{padding:0 0 5px 10px;}
	#header .logo{padding-left:10px;}
	
	.grid{
		float:left;
		width:48%;
		margin:10px 2% 0 0;
	}
	
	.grid img{
		float:left;
		margin-right:5px;
	}
	
	#gallery{padding-left:1px;}
	
	#gallery .grid{
		width:23%;
		margin:0 2% 0 0;
		padding:0;
	}
	
	#gallery .grid img{
		float:none;
		margin:0;
	}
	
	#sub .grid{
		width:32%;
		margin:10px 1%;
	}
	
	#sub .grid:first-child{ margin-left:0; }	
	#sub .grid:last-child{ margin-right:0; }
}

/* iPad 縦 */
@media only screen and (max-width:768px){
  #header{padding-bottom:0;}	
	#header h1{text-align:center;}
	
	#header .logo{
		float:none;
		text-align:center;
		padding:10px 5px 20px;
	}
	
	#sub ul.list{padding:10px 10px 11px;}
	
	#sub ul.list li{
		padding-bottom:10px;
		margin-bottom:8px;
	}
}

/* スマートフォン 横(ランドスケープ) */
@media only screen and (max-width:640px){
	#footer .grid p{text-align:center;}
	
	.grid img{
		float:none;
		margin:20px auto 10px;
	}
	
	.grid p,#sub .grid li{text-align:left;}

  .alignleft,.alignright{
		float:none;
		display:block;
		margin:0 auto 10px;
	}
}

/* スマートフォン 縦(ポートレート) */
@media only screen and (max-width:480px){
	#header .inner, #wrapper {
		margin-left: 10px;
		margin-right: 10px;
	}
	
	#sub .grid{
		float:none;
		width:98%;
	}
	
	#sub .grid h3{padding:10px 5px;}
	
	#sub ul.list{padding:10px;}
	
	#sub ul.list li{
		padding-bottom:3px;
		margin-bottom:3px;
	}
	
	#sub ul.list li img{margin:0 5px 0 0;}
}

